rewrite endpoint PATCH::/stats/visit/{session} and POST::/stats/set/visit/{app}
